--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,25 @@
 
+img{
+    height: 250px;
+}
+
+nav ul {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 260px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: black;
+}
+
+
+
+
+/*-----------------------*/
+
+
 html{
     font-family: sans-serif;
     line-height: 1.15;
